fix horizontal scrolling issue

--- a/_sass/landing/landing.scss
+++ b/_sass/landing/landing.scss
@@ -1,4 +1,5 @@
 .main {
+  overflow-x: hidden;
 
   .article {
     margin: 0 auto;
